src/test/ui/parser/extern-crate-unexpected-token.rs
extern crte foo; //~ ERROR expected one of `crate`, `fn`, or `{`, found `crte`
